// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopRegion/> renders correctly if contains children 1`] = `
<div
  className="TopRegionStyled-eOdIJY ljMgnx"
>
  <div
    className="TopRegionContentStyled-hekJiL ljGiLz"
  >
    <div>
      TEST
    </div>
  </div>
</div>
`;

exports[`<TopRegion/> renders correctly if prop fixed set false 1`] = `
<div
  className="TopRegionStyled-eOdIJY ljMgnx"
>
  <div
    className="TopRegionContentStyled-hekJiL ljGiLz"
  />
</div>
`;

exports[`<TopRegion/> renders correctly if prop fixed set true 1`] = `
<div
  className="TopRegionStyled-eOdIJY ljMgnx"
>
  <div
    className="TopRegionContentStyled-hekJiL ljGiLz"
  />
</div>
`;

exports[`<TopRegion/> renders correctly with default props 1`] = `
<div
  className="TopRegionStyled-eOdIJY ljMgnx"
>
  <div
    className="TopRegionContentStyled-hekJiL ljGiLz"
  />
</div>
`;
